--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="" />
         <hr />
       </div>
+      <div>
+        <h2>Le mie spese</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Numero</th>
+              <th>Descrizione</th>
+              <th>Costo</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Biglietto Aereo</td>
+              <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+              </tr>
+              <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360&euro;</td>
+                </tr>
+              </tfoot>
+          </tbody>
+        </table>
+        <hr>
+      </div>
     </body>
   </head>
 </html>
