--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
         </table>
         <hr>
       </div>
+      <div>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &#x2717;</li>
+            <li>Visitare greenwich &#x2713;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#x2713;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#x2717;</li>
+        </ul>
+        <hr>
+      </div>
     </body>
   </head>
 </html>
