--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
         </ul>
         <hr>
       </div>
+      <div>
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza</li>
+            <ul>
+                <li><b>999</b> - Emergenza</li>
+                <li><b>101</b> - Numero polizia</li>
+                <li><b>111</b> - Numero assistenza medica</li>
+            </ul>
+
+            <li>Hotel</li>
+            <ul>
+                <li><b>Nome hotel</b>: Buckingham Palace</li>
+                <li><b>Indirizzo hotel</b>: Westminster, London SW1A1AA, Regno Unito</li>
+            </ul>
+
+            <li>Aereo</li>
+            <ul>
+                <li><b>Volo di Andata</b>: YI234X, ore 9.30 da Milano Malpensa</li>
+                <li><b>Volo di Ritorno</b>: YI236X, ore 18.30 da London Heathrow</li>
+            </ul>
+        </ol>
+        <hr>
+      </div>
     </body>
   </head>
 </html>
