Final: Fix and Comment

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <body>
+                        <!-- Titolo principale con immagini copertina -->
       <div>
         <h1>Il mio Viaggio a Londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="" />
@@ -8,6 +9,7 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="" />
         <hr />
       </div>
+                        <!-- Inizio tabella Le mie spese -->
       <div>
         <h2>Le mie spese</h2>
         <table>
@@ -45,6 +47,9 @@
         </table>
         <hr>
       </div>
+                        <!-- Fine tabella -->
+      
+                        <!-- Inizio Cose da fare -->
       <div>
         <h3>Cose da fare</h3>
         <ul>
@@ -55,6 +60,9 @@
         </ul>
         <hr>
       </div>
+                        <!-- Fine Cose da fare -->
+
+                        <!-- Inizio Info Utili -->
       <div>
         <h3>Info utili:</h3>
         <ol>
@@ -79,11 +87,15 @@
         </ol>
         <hr>
       </div>
-      <div>
+                        <!-- Fine Info Utili -->
+
+                        <!-- Inizio Foto finali -->
+      <div> 
         <h3>Le foto</h3>
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
         <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
       </div>
+                        <!-- Fine Foto finali -->
     </body>
   </head>
 </html>
